[tool.poetry]
name = "python-asyncio-users-demo"
version = "0.1.0"
description = "Asynchronous user managment for python"
authors = ["ericcardozo <eric.m.cardozo@mi.unc.edu.ar>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^2.6.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest-asyncio = "^0.23.5"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
